docker-scripts/ombi/ombi.namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ombi
  labels:
    name: ombi
