docker-scripts/ombi/ombi.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  namespace: ombi
  labels:
    app: ombi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ombi
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
        - name: ombi
          image: linuxserver/ombi:development
          ports:
            - containerPort: 3579
          resources: 
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - mountPath: /config
              name: config
      restartPolicy: Always
      volumes:
        - name: config
          hostPath:
            type: Directory
            path: /home/docker/ombi/config
