docker-scripts/ombi/ombi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: ombi
  name: ombi
spec:
  ports:
  - name: "3579"
    port: 3579
    targetPort: 3579
  selector:
    io.kompose.service: ombi
status:
  loadBalancer: {}
