docker-scripts/ombi/ombi.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ombi
  namespace: ombi
spec:
  selector:
    app: ombi
  ports:
  - protocol: TCP
    name: http
    port: 3579
